# bibliomantic-mcp-server

./: MANIFEST.in  README.md  __init__.py  bibliomantic_fastmcp.py  bibliomantic_fastmcp_ethical.py  divination.py  enhanced_bibliomantic_server.py  enhanced_divination.py  enhanced_iching_core.py  iching.py  pyproject.toml  server_http.py  test_enhanced_iching.py
data/: iching_wilhelm_translation.json
docs/: ADR-002-wilhelm-dataset-extended.md
